// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VaultListDisplay can apply protocol filters 1`] = `
<div
  aria-hidden="true"
>
  <li
    class="MuiListSubheader-root-4 makeStyles-subHeader-3 MuiListSubheader-sticky-9"
  >
    <div
      class="MuiGrid-root-23 makeStyles-root-18 MuiGrid-container-24 MuiGrid-item-25"
    >
      <div
        class="MuiGrid-root-23 makeStyles-titlesContainer-19 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-nameColumn-16 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
        >
          <p
            class="MuiTypography-root-126 makeStyles-title-10 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            All Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 makeStyles-tvlColumn-17 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            TVL
          </p>
          <img
            alt="What is TVL?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
          />
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            MY DEPOSITS
          </p>
          <img
            alt="What represent My Deposits?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="It represents the dollar value of all assets, you deposited in each vault."
          />
          <button
            aria-label="sort ascending by balance"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-justify-content-xs-flex-end-42 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-align-items-xs-center-32 MuiGrid-justify-content-xs-flex-end-42"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-filterButton-197"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
          <p
            class="MuiTypography-root-126 makeStyles-filtersCount-198 MuiTypography-body1-128"
          >
            (
            1
            )
          </p>
        </div>
      </div>
    </div>
  </li>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger ibBTC / crvsBTC LP Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bcrvibbtc.png"
            />
            <div
              class="MuiChip-root-288 makeStyles-newTag-286 MuiChip-sizeSmall-289"
            >
              <span
                class="MuiChip-label-310 MuiChip-labelSmall-311"
              >
                <div
                  class="MuiBox-root-318 MuiBox-root-319"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-179 makeStyles-starIcon-287 MuiSvgIcon-fontSizeInherit-185"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                    />
                  </svg>
                   New
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Convex
                 - 
                ibBTC / crvsBTC LP
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              🚀 Boosted (max. 61.65%)
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          19.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-325"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $141,375,417
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-328"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Badger Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bbadger.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Badger
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-386"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $33,715,600
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-389"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Digg Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bdigg.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Digg
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-397"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $9,688,308
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-400"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay can apply token type filters 1`] = `
<div
  aria-hidden="true"
>
  <li
    class="MuiListSubheader-root-4 makeStyles-subHeader-3 MuiListSubheader-sticky-9"
  >
    <div
      class="MuiGrid-root-23 makeStyles-root-18 MuiGrid-container-24 MuiGrid-item-25"
    >
      <div
        class="MuiGrid-root-23 makeStyles-titlesContainer-19 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-nameColumn-16 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
        >
          <p
            class="MuiTypography-root-126 makeStyles-title-10 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            All Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 makeStyles-tvlColumn-17 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            TVL
          </p>
          <img
            alt="What is TVL?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
          />
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            MY DEPOSITS
          </p>
          <img
            alt="What represent My Deposits?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="It represents the dollar value of all assets, you deposited in each vault."
          />
          <button
            aria-label="sort ascending by balance"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-justify-content-xs-flex-end-42 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-align-items-xs-center-32 MuiGrid-justify-content-xs-flex-end-42"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-filterButton-197"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
          <p
            class="MuiTypography-root-126 makeStyles-filtersCount-198 MuiTypography-body1-128"
          >
            (
            1
            )
          </p>
        </div>
      </div>
    </div>
  </li>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger ibBTC / crvsBTC LP Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bcrvibbtc.png"
            />
            <div
              class="MuiChip-root-288 makeStyles-newTag-286 MuiChip-sizeSmall-289"
            >
              <span
                class="MuiChip-label-310 MuiChip-labelSmall-311"
              >
                <div
                  class="MuiBox-root-318 MuiBox-root-319"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-179 makeStyles-starIcon-287 MuiSvgIcon-fontSizeInherit-185"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                    />
                  </svg>
                   New
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Convex
                 - 
                ibBTC / crvsBTC LP
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              🚀 Boosted (max. 61.65%)
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          19.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-325"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $141,375,417
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-328"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay can change currency 1`] = `
<div
  aria-hidden="true"
>
  <li
    class="MuiListSubheader-root-4 makeStyles-subHeader-3 MuiListSubheader-sticky-9"
  >
    <div
      class="MuiGrid-root-23 makeStyles-root-18 MuiGrid-container-24 MuiGrid-item-25"
    >
      <div
        class="MuiGrid-root-23 makeStyles-titlesContainer-19 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-nameColumn-16 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
        >
          <p
            class="MuiTypography-root-126 makeStyles-title-10 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            All Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 makeStyles-tvlColumn-17 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            TVL
          </p>
          <img
            alt="What is TVL?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
          />
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            MY DEPOSITS
          </p>
          <img
            alt="What represent My Deposits?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="It represents the dollar value of all assets, you deposited in each vault."
          />
          <button
            aria-label="sort ascending by balance"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-justify-content-xs-flex-end-42 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-align-items-xs-center-32 MuiGrid-justify-content-xs-flex-end-42"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-filterButton-197"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
          <p
            class="MuiTypography-root-126 makeStyles-filtersCount-198 MuiTypography-body1-128"
          >
            (
            1
            )
          </p>
        </div>
      </div>
    </div>
  </li>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger ibBTC / crvsBTC LP Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bcrvibbtc.png"
            />
            <div
              class="MuiChip-root-288 makeStyles-newTag-286 MuiChip-sizeSmall-289"
            >
              <span
                class="MuiChip-label-310 MuiChip-labelSmall-311"
              >
                <div
                  class="MuiBox-root-318 MuiBox-root-319"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-179 makeStyles-starIcon-287 MuiSvgIcon-fontSizeInherit-185"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                    />
                  </svg>
                   New
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Convex
                 - 
                ibBTC / crvsBTC LP
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              🚀 Boosted (max. 61.65%)
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          19.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-325"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            ₿3,216
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-328"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            ₿-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Badger Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bbadger.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Badger
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-386"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            ₿767
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-389"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            ₿-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Digg Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bdigg.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Digg
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-397"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            ₿220
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-400"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            ₿-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay can clear dust from portfolio 1`] = `
<div
  aria-hidden="true"
>
  <li
    class="MuiListSubheader-root-4 makeStyles-subHeader-3 MuiListSubheader-sticky-9"
  >
    <div
      class="MuiGrid-root-23 makeStyles-root-18 MuiGrid-container-24 MuiGrid-item-25"
    >
      <div
        class="MuiGrid-root-23 makeStyles-titlesContainer-19 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-nameColumn-16 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
        >
          <p
            class="MuiTypography-root-126 makeStyles-title-10 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            All Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 makeStyles-tvlColumn-17 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            TVL
          </p>
          <img
            alt="What is TVL?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
          />
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            MY DEPOSITS
          </p>
          <img
            alt="What represent My Deposits?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="It represents the dollar value of all assets, you deposited in each vault."
          />
          <button
            aria-label="sort ascending by balance"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-justify-content-xs-flex-end-42 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-align-items-xs-center-32 MuiGrid-justify-content-xs-flex-end-42"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-filterButton-197"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
          <p
            class="MuiTypography-root-126 makeStyles-filtersCount-198 MuiTypography-body1-128"
          >
            (
            1
            )
          </p>
        </div>
      </div>
    </div>
  </li>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Badger Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bbadger.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Badger
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-386"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $33,715,600
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-389"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Digg Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bdigg.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Digg
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-397"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $9,688,308
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-400"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay can clear filters 1`] = `
<div
  aria-hidden="true"
>
  <li
    class="MuiListSubheader-root-4 makeStyles-subHeader-3 MuiListSubheader-sticky-9"
  >
    <div
      class="MuiGrid-root-23 makeStyles-root-18 MuiGrid-container-24 MuiGrid-item-25"
    >
      <div
        class="MuiGrid-root-23 makeStyles-titlesContainer-19 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-nameColumn-16 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
        >
          <p
            class="MuiTypography-root-126 makeStyles-title-10 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            All Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 makeStyles-tvlColumn-17 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            TVL
          </p>
          <img
            alt="What is TVL?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
          />
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            MY DEPOSITS
          </p>
          <img
            alt="What represent My Deposits?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="It represents the dollar value of all assets, you deposited in each vault."
          />
          <button
            aria-label="sort ascending by balance"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-justify-content-xs-flex-end-42 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-align-items-xs-center-32 MuiGrid-justify-content-xs-flex-end-42"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-filterButton-197"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-401"
            />
          </button>
        </div>
      </div>
    </div>
  </li>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger ibBTC / crvsBTC LP Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bcrvibbtc.png"
            />
            <div
              class="MuiChip-root-470 makeStyles-newTag-286 MuiChip-sizeSmall-471"
            >
              <span
                class="MuiChip-label-492 MuiChip-labelSmall-493"
              >
                <div
                  class="MuiBox-root-318 MuiBox-root-500"
                >
                  <svg
                    aria-hidden="true"
                    class="MuiSvgIcon-root-179 makeStyles-starIcon-287 MuiSvgIcon-fontSizeInherit-185"
                    focusable="false"
                    viewBox="0 0 24 24"
                  >
                    <path
                      d="M12 17.27L18.18 21l-1.64-7.03L22 9.24l-7.19-.61L12 2 9.19 8.63 2 9.24l5.46 4.73L5.82 21z"
                    />
                  </svg>
                   New
                </div>
              </span>
            </div>
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Convex
                 - 
                ibBTC / crvsBTC LP
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              🚀 Boosted (max. 61.65%)
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          19.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-503"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $141,375,417
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-506"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Badger Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bbadger.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Badger
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-386"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $33,715,600
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-389"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-231 makeStyles-enabledVault-232 MuiGrid-container-24 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-clickableSection-235 MuiGrid-container-24 MuiGrid-spacing-xs-4-49 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
    >
      <div
        class="MuiGrid-root-23 makeStyles-name-234 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-rootContainerLarge-276 MuiGrid-container-24 MuiGrid-align-items-xs-center-32"
        >
          <div
            class="MuiGrid-root-23 makeStyles-vaultIcon-281 MuiGrid-item-25 MuiGrid-grid-xs-2-59"
          >
            <img
              alt="Badger Digg Vault Symbol"
              class="makeStyles-symbol-280"
              src="/assets/icons/bdigg.png"
            />
          </div>
          <div
            class="MuiGrid-root-23 makeStyles-nameAndBoostContainer-277 MuiGrid-item-25 MuiGrid-grid-xs-true-57"
          >
            <div
              class="makeStyles-nameContainer-278"
            >
              <p
                class="MuiTypography-root-126 makeStyles-vaultName-279 MuiTypography-body1-128"
              >
                Badger
                 - 
                Digg
              </p>
            </div>
            <p
              class="MuiTypography-root-126 makeStyles-boost-284 MuiTypography-body1-128 MuiTypography-colorTextSecondary-152"
            >
              Non-boosted
            </p>
          </div>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <p
          class="MuiTypography-root-126 makeStyles-apr-320 MuiTypography-body1-128 MuiTypography-colorTextPrimary-151"
        >
          8.17%
        </p>
      </div>
      <div
        class="MuiGrid-root-23 makeStyles-tvl-238 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-529"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $9,688,308
          </p>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiBox-root-318 MuiBox-root-532"
        >
          <p
            class="MuiTypography-root-126 makeStyles-itemText-237 MuiTypography-body1-128"
          >
            $-
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root-23 makeStyles-nonClickableSection-236 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-2-47 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-outlined-337 makeStyles-button-329 MuiButton-outlinedPrimary-338 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Deposit
            </span>
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-332 MuiButton-contained-340 makeStyles-button-329 MuiButton-containedPrimary-341 MuiButton-disabled-345 WithStyles(ForwardRef(Button))-disabled-331 MuiButtonBase-disabled-177"
            disabled=""
            tabindex="-1"
            type="button"
          >
            <span
              class="MuiButton-label-333"
            >
              Withdraw
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`VaultListDisplay displays empty search message 1`] = `
<div
  aria-hidden="true"
>
  <li
    class="MuiListSubheader-root-4 makeStyles-subHeader-3 MuiListSubheader-sticky-9"
  >
    <div
      class="MuiGrid-root-23 makeStyles-root-18 MuiGrid-container-24 MuiGrid-item-25"
    >
      <div
        class="MuiGrid-root-23 makeStyles-titlesContainer-19 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-9-94 MuiGrid-grid-lg-true-99"
      >
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-nameColumn-16 MuiGrid-item-25 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-6-91 MuiGrid-grid-lg-true-99"
        >
          <p
            class="MuiTypography-root-126 makeStyles-title-10 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            All Vaults
          </p>
          <img
            alt="List description"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="A vault is a smart contract which hold specific tokens. It secures your crypto, while making your money work (e.g. rewards, APR...)"
          />
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            APR
          </p>
          <img
            alt="What is APR?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="An annual percentage rate (APR), is the yearly rate earned by staking in each vault."
          />
          <button
            aria-label="sort descending by APR"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-348"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 makeStyles-tvlColumn-17 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            TVL
          </p>
          <img
            alt="What is TVL?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="Total value locked (TVL) represents the dollar value of all the assets staked in each vault."
          />
          <button
            aria-label="sort descending by TVL"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11 makeStyles-nonSetSort-13"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-348"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 makeStyles-title-10 makeStyles-columnTitle-15 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-align-items-xs-center-32 MuiGrid-grid-xs-12-69 MuiGrid-grid-md-true-85"
        >
          <p
            class="MuiTypography-root-126 MuiTypography-body2-127 MuiTypography-colorTextSecondary-152"
          >
            MY DEPOSITS
          </p>
          <img
            alt="What represent My Deposits?"
            class="makeStyles-sortInfoIcon-12"
            color="primary"
            src="/assets/icons/vault-sort-info.svg"
            title="It represents the dollar value of all assets, you deposited in each vault."
          />
          <button
            aria-label="sort ascending by balance"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-sortIcon-11"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root-179 MuiSvgIcon-colorPrimary-180"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M20 12l-1.41-1.41L13 16.17V4h-2v12.17l-5.58-5.59L4 12l8 8 8-8z"
                />
              </svg>
            </span>
            <span
              class="MuiTouchRipple-root-348"
            />
          </button>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-justify-content-xs-flex-end-42 MuiGrid-grid-md-true-85"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-align-items-xs-center-32 MuiGrid-justify-content-xs-flex-end-42"
        >
          <button
            aria-label="Open Vaults Filters"
            class="MuiButtonBase-root-176 MuiIconButton-root-167 makeStyles-filterButton-197"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiIconButton-label-175"
            >
              <img
                alt="vault filters"
                src="/assets/icons/vault-filters.svg"
              />
            </span>
            <span
              class="MuiTouchRipple-root-348"
            />
          </button>
          <p
            class="MuiTypography-root-126 makeStyles-filtersCount-198 MuiTypography-body1-128"
          >
            (
            1
            )
          </p>
        </div>
      </div>
    </div>
  </li>
  <div
    class="MuiPaper-root-248 MuiCard-root-247 MuiGrid-root-23 makeStyles-root-413 MuiGrid-container-24 MuiGrid-justify-content-xs-center-41 MuiPaper-elevation1-252 MuiPaper-rounded-249"
  >
    <div
      class="MuiGrid-root-23 makeStyles-content-415 MuiGrid-container-24 MuiGrid-item-25 MuiGrid-grid-xs-10-67 MuiGrid-grid-sm-6-77 MuiGrid-grid-md-3-88"
    >
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-spacing-xs-1-46 MuiGrid-direction-xs-column-27 MuiGrid-justify-content-xs-center-41"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <img
            alt="vault search is empty"
            src="/assets/icons/empty-vaults-search.svg"
          />
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25"
        >
          <h6
            class="MuiTypography-root-126 MuiTypography-h6-136 MuiTypography-colorTextSecondary-152"
          >
            Hmmm...
          </h6>
        </div>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24 MuiGrid-justify-content-xs-center-41"
      >
        <p
          class="MuiTypography-root-126 MuiTypography-body2-127"
        >
          We couldn't find any matches for your selected filters. Try other filters?
        </p>
      </div>
      <div
        class="MuiGrid-root-23 MuiGrid-container-24"
      >
        <div
          class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-301 MuiButton-contained-309 makeStyles-filtersButton-414 MuiButton-containedPrimary-310"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-302"
            >
              Filters
            </span>
            <span
              class="MuiTouchRipple-root-348"
            />
          </button>
        </div>
        <div
          class="MuiGrid-root-23 MuiGrid-item-25 MuiGrid-grid-xs-12-69"
        >
          <button
            class="MuiButtonBase-root-176 MuiButton-root-301 MuiButton-text-303 MuiButton-textPrimary-304"
            tabindex="0"
            type="button"
          >
            <span
              class="MuiButton-label-302"
            >
              Go Back To All Vaults
            </span>
            <span
              class="MuiTouchRipple-root-348"
            />
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
